--- a/style.css
+++ b/style.css
@@ -5,12 +5,15 @@ body {
 h1 {
   font-size: 50px;
 }
+h2 {
+  font-size: 40px;
+}
 
 .orange-color {
   color: orange;
 }
 
-section {
+.flexible-container {
   display: flex;
   margin-bottom: 150px;
 }
@@ -40,4 +43,34 @@ section {
   background-image: url(images/dream-bg.png);
   background-repeat: no-repeat;
   background-position: right;
+}
+
+.experience-item {
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 10px;
+  padding-left: 5%;
+  box-shadow: 10px 10px 40px gray;
+}
+
+.experience-area {
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+#web-dev-experience {
+  border-left: 7px solid;
+  border-image: linear-gradient(blue, cyan);
+  border-image-slice: 1;
+}
+
+#full-stack-web {
+  border-left: 7px solid;
+  border-image: linear-gradient(rgb(151, 44, 53), hsl(347, 100%, 50%));
+  border-image-slice: 1;
+}
+
+footer p {
+  text-align: center;
 }
